syntax = "proto3";
option csharp_namespace = "CraftAI.Gate.Service";
package craftai.entity;
// The greeting service definition.
message ConnectRequest {
	string serverUri = 1;
	string nickname = 2;
}

message ConnectResponse {
	string uuid = 1;
}